# ray-tracing

./: .gitignore  CMakeLists.txt  bbox.h  bvh.h  camera.h  config.h  config.hpp  global.h  hittable.h  hittable_list.h  interval.h  main.cc  material.h  objloader.h  ray.h  readme.md  screen.h  sphere.h  texture.h  timer.h  triangle.h  vec3.h
model/: tiny_desktop.mtl
model/room/: room.mtl
